--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
   background-color: #61925f; /* cor de fundo igual da imagem */
   color: #000000; /* texto padrão */
   padding: 0 1rem;
+  margin: 0;
 }
 
 header {
